Add sanction ranking.
Start using deedle but comment this out as it is having trouble reading
the CSV file.

--- a/Prototypes/PilotRankFromComps/PilotRankFromComps/PilotRankFromComps.fsproj
+++ b/Prototypes/PilotRankFromComps/PilotRankFromComps/PilotRankFromComps.fsproj
@@ -40,6 +40,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Deedle">
+      <HintPath>..\packages\Deedle.0.9.12\lib\net40\Deedle.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Data">
       <HintPath>..\packages\FSharp.Data.2.0.7\lib\net40\FSharp.Data.dll</HintPath>
       <Private>True</Private>
