Deedle CSV loading is broken, park it for now.

--- a/Prototypes/PilotRankFromComps/PilotRankFromComps/PilotRankFromComps.fsproj
+++ b/Prototypes/PilotRankFromComps/PilotRankFromComps/PilotRankFromComps.fsproj
@@ -58,10 +58,11 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Ranking.fsx" />
+    <None Include="Deedle.fsx" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Ranking.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
